--- a/autoconfigure/sparkstreaming/pom.xml
+++ b/autoconfigure/sparkstreaming/pom.xml
@@ -19,38 +19,21 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
     <groupId>io.zipkin.sparkstreaming</groupId>
+    <artifactId>zipkin-sparkstreaming-autoconfigure-parent</artifactId>
     <version>0.1.0-SNAPSHOT</version>
-    <artifactId>zipkin-autoconfigure-parent</artifactId>
   </parent>
   <modelVersion>4.0.0</modelVersion>
+  <artifactId>zipkin-autoconfigure-sparkstreaming</artifactId>
+  <name>Zipkin Spark Streaming Auto Configure: Main</name>
+
   <properties>
     <main.basedir>${project.basedir}/../..</main.basedir>
   </properties>
-  <artifactId>zipkin-autoconfigure-sparkstreaming</artifactId>
-  <name>Zipkin Auto Configuration: Spark Streaming</name>
-
-  <dependencyManagement>
-    <dependencies>
-      <dependency>
-        <!-- Import dependency management from Spring Boot -->
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-dependencies</artifactId>
-        <version>${spring-boot.version}</version>
-        <type>pom</type>
-        <scope>import</scope>
-      </dependency>
-    </dependencies>
-  </dependencyManagement>
 
   <dependencies>
     <dependency>
       <groupId>io.zipkin.sparkstreaming</groupId>
       <artifactId>zipkin-sparkstreaming</artifactId>
-      <version>${project.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-autoconfigure</artifactId>
     </dependency>
   </dependencies>
 </project>
