Adds Adjuster and simplifies other names. Fleshes out README (#5)
This adds Adjuster which is the first notable design win in comparison
with the typical Zipkin collector. This accepts an iterable of spans
grouped by trace ID and occurs prior to storage. Multiple adjusters
can be created.

Thanks to @mansu and @naoman for the design idea.

This also simplifies type naming, particularly as it makes the README
easier to write and package and artifact names less long.

--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,9 @@
 
   <modules>
     <module>sparkstreaming</module>
+    <module>stream</module>
+    <module>adjuster</module>
+    <module>consumer</module>
     <module>autoconfigure</module>
     <module>sparkstreaming-job</module>
   </modules>
@@ -69,7 +72,8 @@
   <scm>
     <url>https://github.com/openzipkin/zipkin-sparkstreaming</url>
     <connection>scm:git:https://github.com/openzipkin/zipkin-sparkstreaming.git</connection>
-    <developerConnection>scm:git:https://github.com/openzipkin/zipkin-sparkstreaming.git</developerConnection>
+    <developerConnection>scm:git:https://github.com/openzipkin/zipkin-sparkstreaming.git
+    </developerConnection>
     <tag>HEAD</tag>
   </scm>
 
@@ -109,12 +113,6 @@
       <dependency>
         <groupId>${project.groupId}</groupId>
         <artifactId>zipkin-autoconfigure-sparkstreaming</artifactId>
-        <version>${project.version}</version>
-      </dependency>
-
-      <dependency>
-        <groupId>${project.groupId}</groupId>
-        <artifactId>zipkin-sparkstreaming-autoconfigure-adjuster-finagle</artifactId>
         <version>${project.version}</version>
       </dependency>
 
