--- a/sparkstreaming-job/pom.xml
+++ b/sparkstreaming-job/pom.xml
@@ -73,6 +73,11 @@
     </dependency>
 
     <dependency>
+      <groupId>${project.groupId}</groupId>
+      <artifactId>zipkin-sparkstreaming-autoconfigure-stream-kafka</artifactId>
+    </dependency>
+
+    <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-test</artifactId>
       <scope>test</scope>
@@ -81,6 +86,13 @@
 
   <build>
     <plugins>
+      <plugin>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-maven-plugin</artifactId>
+        <configuration>
+          <classifier>exec</classifier>
+        </configuration>
+      </plugin>
       <plugin>
         <artifactId>maven-shade-plugin</artifactId>
         <version>3.0.0</version>
@@ -106,6 +118,12 @@
               <minimizeJar>true</minimizeJar>
               <filters>
                 <!-- Prevent minification from excluding classes looked up by name -->
+                <filter>
+                  <artifact>io.zipkin.sparkstreaming:*</artifact>
+                  <includes>
+                    <include>**</include>
+                  </includes>
+                </filter>
                 <filter>
                   <artifact>org.springframework:spring-context</artifact>
                   <includes>
