--- a/autoconfigure/pom.xml
+++ b/autoconfigure/pom.xml
@@ -14,7 +14,9 @@
     the License.
 
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
@@ -33,7 +35,6 @@
   </properties>
 
   <modules>
-    <module>sparkstreaming</module>
   </modules>
 
   <dependencyManagement>
@@ -50,6 +51,10 @@
   </dependencyManagement>
 
   <dependencies>
+    <dependency>
+      <groupId>io.zipkin.sparkstreaming</groupId>
+      <artifactId>zipkin-sparkstreaming</artifactId>
+    </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-autoconfigure</artifactId>
