Adds initial Finagle Adjuster (#6)
This fixes up spans reported by [Finagle](https://github.com/twitter/finagle/tree/develop/finagle-zipkin).

Adjustment code should not be added without a tracking issue either in
[Finagle](https://github.com/twitter/finagle/issues) or [Zipkin Finagle](https://github.com/openzipkin/zipkin-finagle/issues).

FinagleAdjuster can be used as a library, where attributes are set via
`FinagleAdjuster.Builder`.

It is more commonly enabled with Spring via autoconfiguration when
"zipkin.sparkstreaming.adjuster.finagle.enabled" is set to "true"

Here are the relevant setting and a short description. Properties all
have a prefix of "zipkin.sparkstreaming.adjuster.finagle"

Attribute | Property | Description | Fix
--- | --- | --- | ---
applyTimestampAndDuration | apply-timestamp-and-duration | Backfill span.timestamp and duration based on annotations. Defaults to true | [Use zipkin-finagle](https://github.com/openzipkin/zipkin-finagle/issues/10)

--- a/pom.xml
+++ b/pom.xml
@@ -129,6 +129,18 @@
       </dependency>
 
       <dependency>
+        <groupId>${project.groupId}</groupId>
+        <artifactId>zipkin-sparkstreaming-adjuster-finagle</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>${project.groupId}</groupId>
+        <artifactId>zipkin-sparkstreaming-autoconfigure-adjuster-finagle</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+
+      <dependency>
         <groupId>io.zipkin.java</groupId>
         <artifactId>zipkin</artifactId>
         <version>${zipkin.version}</version>
