--- a/autoconfigure/pom.xml
+++ b/autoconfigure/pom.xml
@@ -37,6 +37,7 @@
   <modules>
     <module>stream-kafka</module>
     <module>adjuster-finagle</module>
+    <module>consumer-storage</module>
   </modules>
 
   <dependencyManagement>
