--- a/consumer/storage/pom.xml
+++ b/consumer/storage/pom.xml
@@ -14,31 +14,35 @@
     the License.
 
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
     <groupId>io.zipkin.sparkstreaming</groupId>
-    <artifactId>zipkin-sparkstreaming-parent</artifactId>
+    <artifactId>zipkin-sparkstreaming-consumer-parent</artifactId>
     <version>0.1.0-SNAPSHOT</version>
   </parent>
+  <modelVersion>4.0.0</modelVersion>
 
-  <artifactId>zipkin-sparkstreaming-consumer-parent</artifactId>
-  <name>Zipkin Spark Streaming: Consumers</name>
-  <packaging>pom</packaging>
+  <artifactId>zipkin-sparkstreaming-consumer-storage</artifactId>
+  <name>Zipkin Spark Streaming Consumer: Zipkin Storage</name>
 
   <properties>
-    <main.basedir>${project.basedir}/..</main.basedir>
+    <main.basedir>${project.basedir}/../..</main.basedir>
   </properties>
-
-  <modules>
-    <module>storage</module>
-  </modules>
 
   <dependencies>
     <dependency>
-      <groupId>${project.groupId}</groupId>
-      <artifactId>zipkin-sparkstreaming</artifactId>
+      <groupId>com.google.auto.value</groupId>
+      <artifactId>auto-value</artifactId>
+      <scope>provided</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <version>2.7.3</version>
+      <scope>test</scope>
     </dependency>
   </dependencies>
 </project>
