--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,9 @@
     <scala.binary.version>2.10</scala.binary.version>
     <spark.version>1.6.3</spark.version>
 
-    <zipkin.version>1.20.0</zipkin.version>
+    <!-- versions coupled to zipkin -->
+    <zipkin.version>1.20.1</zipkin.version>
+    <cassandra-driver-core.version>3.1.3</cassandra-driver-core.version>
     <spring-boot.version>1.4.4.RELEASE</spring-boot.version>
   </properties>
 
@@ -130,6 +132,18 @@
 
       <dependency>
         <groupId>${project.groupId}</groupId>
+        <artifactId>zipkin-sparkstreaming-consumer-storage</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>${project.groupId}</groupId>
+        <artifactId>zipkin-sparkstreaming-autoconfigure-consumer-storage</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>${project.groupId}</groupId>
         <artifactId>zipkin-sparkstreaming-adjuster-finagle</artifactId>
         <version>${project.version}</version>
       </dependency>
@@ -169,6 +183,25 @@
         <groupId>com.fasterxml.jackson.module</groupId>
         <artifactId>jackson-module-scala_${scala.binary.version}</artifactId>
         <version>2.8.5</version>
+      </dependency>
+
+      <!-- Least version compatible with cassandra -->
+      <dependency>
+        <groupId>com.google.guava</groupId>
+        <artifactId>guava</artifactId>
+        <version>16.0.1</version>
+      </dependency>
+
+      <!-- Needs to be defined here or else spring-boot-dependencies will override it -->
+      <dependency>
+        <groupId>com.datastax.cassandra</groupId>
+        <artifactId>cassandra-driver-core</artifactId>
+        <version>${cassandra-driver-core.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.datastax.cassandra</groupId>
+        <artifactId>cassandra-driver-mapping</artifactId>
+        <version>${cassandra-driver-core.version}</version>
       </dependency>
 
       <dependency>
