--- a/consumer/pom.xml
+++ b/consumer/pom.xml
@@ -20,7 +20,7 @@
   <parent>
     <groupId>io.zipkin.sparkstreaming</groupId>
     <artifactId>zipkin-sparkstreaming-parent</artifactId>
-    <version>0.1.0-SNAPSHOT</version>
+    <version>0.1.0</version>
   </parent>
 
   <artifactId>zipkin-sparkstreaming-consumer-parent</artifactId>
