--- a/autoconfigure/pom.xml
+++ b/autoconfigure/pom.xml
@@ -33,6 +33,7 @@
   </properties>
 
   <modules>
+    <module>stream-http</module>
     <module>stream-kafka</module>
     <module>adjuster-finagle</module>
     <module>consumer-storage</module>
