--- a/autoconfigure/stream-http/pom.xml
+++ b/autoconfigure/stream-http/pom.xml
@@ -14,32 +14,26 @@
     the License.
 
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
     <groupId>io.zipkin.sparkstreaming</groupId>
-    <artifactId>zipkin-sparkstreaming-parent</artifactId>
+    <artifactId>zipkin-sparkstreaming-autoconfigure-parent</artifactId>
     <version>0.1.1-SNAPSHOT</version>
   </parent>
-
-  <artifactId>zipkin-sparkstreaming-stream-parent</artifactId>
-  <name>Zipkin Spark Streaming: Stream Factories</name>
-  <packaging>pom</packaging>
+  <modelVersion>4.0.0</modelVersion>
+  <artifactId>zipkin-sparkstreaming-autoconfigure-stream-http</artifactId>
+  <name>Zipkin Spark Streaming Auto Configure: Http Stream</name>
 
   <properties>
-    <main.basedir>${project.basedir}/..</main.basedir>
+    <main.basedir>${project.basedir}/../..</main.basedir>
   </properties>
-
-  <modules>
-    <module>http</module>
-    <module>kafka</module>
-  </modules>
 
   <dependencies>
     <dependency>
-      <groupId>${project.groupId}</groupId>
-      <artifactId>zipkin-sparkstreaming</artifactId>
+      <groupId>io.zipkin.sparkstreaming</groupId>
+      <artifactId>zipkin-sparkstreaming-stream-http</artifactId>
     </dependency>
   </dependencies>
 </project>
