--- a/sparkstreaming-job/pom.xml
+++ b/sparkstreaming-job/pom.xml
@@ -50,6 +50,11 @@
 
     <dependency>
       <groupId>${project.groupId}</groupId>
+      <artifactId>zipkin-sparkstreaming-autoconfigure-stream-http</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>${project.groupId}</groupId>
       <artifactId>zipkin-sparkstreaming-autoconfigure-stream-kafka</artifactId>
     </dependency>
 
