Exposes zipkin.log-level to control logging without rebuilding (#34)
Before, we could only control logging by rebuilding. This special-cases
the "zipkin" category such that it can be controlled without
distributing files to the cluster or changing dependencies.

Note: this only special-cases the zipkin log category. Third party code
that logs outside the zipkin category will need to do something more
involved, possibly creating and distributing a log4j.properties file and
enabling it on the executors.

--- a/consumer/storage/pom.xml
+++ b/consumer/storage/pom.xml
@@ -42,5 +42,11 @@
       <version>2.7.3</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>com.portingle</groupId>
+      <artifactId>slf4jtesting</artifactId>
+      <version>1.0.1</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 </project>
