--- a/pom.xml
+++ b/pom.xml
@@ -207,12 +207,6 @@
         <artifactId>auto-value</artifactId>
         <version>1.4-rc2</version>
       </dependency>
-
-      <dependency>
-        <groupId>ch.qos.logback</groupId>
-        <artifactId>logback-classic</artifactId>
-        <version>1.1.8</version>
-      </dependency>
     </dependencies>
   </dependencyManagement>
 
@@ -220,6 +214,18 @@
     <dependency>
       <groupId>io.zipkin.java</groupId>
       <artifactId>zipkin</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-log4j12</artifactId>
+      <version>1.7.24</version>
+    </dependency>
+
+    <dependency>
+      <groupId>log4j</groupId>
+      <artifactId>log4j</artifactId>
+      <version>1.2.17</version>
     </dependency>
 
     <dependency>
@@ -241,12 +247,6 @@
       <artifactId>zipkin</artifactId>
       <version>${zipkin.version}</version>
       <type>test-jar</type>
-      <scope>test</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>ch.qos.logback</groupId>
-      <artifactId>logback-classic</artifactId>
       <scope>test</scope>
     </dependency>
   </dependencies>
