--- a/pom.xml
+++ b/pom.xml
@@ -293,7 +293,7 @@
       <plugin>
         <groupId>net.orfjackal.retrolambda</groupId>
         <artifactId>retrolambda-maven-plugin</artifactId>
-        <version>2.5.0</version>
+        <version>2.5.1</version>
         <executions>
           <execution>
             <goals>
@@ -301,7 +301,7 @@
             </goals>
             <configuration>
               <target>${main.java.version}</target>
-              <fork>false</fork>
+              <fork>true</fork>
             </configuration>
           </execution>
         </executions>
