--- a/autoconfigure/stream-kafka/pom.xml
+++ b/autoconfigure/stream-kafka/pom.xml
@@ -18,7 +18,7 @@
     <parent>
         <groupId>io.zipkin.sparkstreaming</groupId>
         <artifactId>zipkin-sparkstreaming-autoconfigure-parent</artifactId>
-        <version>0.3.1</version>
+        <version>0.3.2-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>zipkin-sparkstreaming-autoconfigure-stream-kafka</artifactId>
