--- a/pom.xml
+++ b/pom.xml
@@ -46,9 +46,9 @@
     <spark.version>1.6.3</spark.version>
 
     <!-- versions coupled to zipkin -->
-    <zipkin.version>1.28.1</zipkin.version>
-    <cassandra-driver-core.version>3.3.0</cassandra-driver-core.version>
-    <spring-boot.version>1.5.4.RELEASE</spring-boot.version>
+    <zipkin.version>2.2.3</zipkin.version>
+    <cassandra-driver-core.version>3.3.1</cassandra-driver-core.version>
+    <spring-boot.version>1.5.8.RELEASE</spring-boot.version>
   </properties>
 
   <name>Zipkin Spark Streaming (Parent)</name>
@@ -198,7 +198,7 @@
       <dependency>
         <groupId>com.google.auto.value</groupId>
         <artifactId>auto-value</artifactId>
-        <version>1.4.1</version>
+        <version>1.5.2</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
@@ -231,7 +231,7 @@
     <dependency>
       <groupId>org.assertj</groupId>
       <artifactId>assertj-core</artifactId>
-      <version>3.6.1</version>
+      <version>3.8.0</version>
       <scope>test</scope>
     </dependency>
 
@@ -251,7 +251,7 @@
         <plugin>
           <groupId>io.takari</groupId>
           <artifactId>maven</artifactId>
-          <version>0.4.1</version>
+          <version>0.5.0</version>
         </plugin>
       </plugins>
     </pluginManagement>
@@ -260,7 +260,7 @@
       <plugin>
         <inherited>true</inherited>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.6.1</version>
+        <version>3.7.0</version>
         <configuration>
           <!-- Retrolambda will rewrite lambdas as Java 6 bytecode -->
           <source>1.8</source>
@@ -278,7 +278,7 @@
           <dependency>
             <groupId>com.google.errorprone</groupId>
             <artifactId>error_prone_core</artifactId>
-            <version>2.0.19</version>
+            <version>2.1.2</version>
           </dependency>
         </dependencies>
       </plugin>
@@ -295,6 +295,7 @@
             <configuration>
               <target>${main.java.version}</target>
               <fork>true</fork>
+              <quiet>true</quiet>
             </configuration>
           </execution>
         </executions>
@@ -303,7 +304,7 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>animal-sniffer-maven-plugin</artifactId>
-        <version>1.15</version>
+        <version>1.16</version>
         <configuration>
           <signature>
             <groupId>org.codehaus.mojo.signature</groupId>
