--- a/autoconfigure/pom.xml
+++ b/autoconfigure/pom.xml
@@ -20,7 +20,7 @@
   <parent>
     <groupId>io.zipkin.sparkstreaming</groupId>
     <artifactId>zipkin-sparkstreaming-parent</artifactId>
-    <version>0.3.5</version>
+    <version>0.3.6-SNAPSHOT</version>
   </parent>
 
   <artifactId>zipkin-sparkstreaming-autoconfigure-parent</artifactId>
