--- a/adjuster/finagle/pom.xml
+++ b/adjuster/finagle/pom.xml
@@ -18,7 +18,7 @@
   <parent>
     <groupId>io.zipkin.sparkstreaming</groupId>
     <artifactId>zipkin-sparkstreaming-adjuster-parent</artifactId>
-    <version>0.3.7-SNAPSHOT</version>
+    <version>0.3.7</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
