--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
 
   <groupId>io.zipkin.sparkstreaming</groupId>
   <artifactId>zipkin-sparkstreaming-parent</artifactId>
-  <version>0.3.7-SNAPSHOT</version>
+  <version>0.3.7</version>
   <packaging>pom</packaging>
 
   <modules>
@@ -74,7 +74,7 @@
     <connection>scm:git:https://github.com/openzipkin/zipkin-sparkstreaming.git</connection>
     <developerConnection>scm:git:https://github.com/openzipkin/zipkin-sparkstreaming.git
     </developerConnection>
-    <tag>HEAD</tag>
+    <tag>0.3.7</tag>
   </scm>
 
   <!-- Developer section is needed for Maven Central, but doesn't need to include each person -->
