--- a/autoconfigure/adjuster-finagle/pom.xml
+++ b/autoconfigure/adjuster-finagle/pom.xml
@@ -18,7 +18,7 @@
   <parent>
     <groupId>io.zipkin.sparkstreaming</groupId>
     <artifactId>zipkin-sparkstreaming-autoconfigure-parent</artifactId>
-    <version>0.3.8-SNAPSHOT</version>
+    <version>0.3.8</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>zipkin-sparkstreaming-autoconfigure-adjuster-finagle</artifactId>
