--- a/stream/kafka/pom.xml
+++ b/stream/kafka/pom.xml
@@ -18,7 +18,7 @@
     <parent>
         <groupId>io.zipkin.sparkstreaming</groupId>
         <artifactId>zipkin-sparkstreaming-stream-parent</artifactId>
-        <version>0.3.9-SNAPSHOT</version>
+        <version>0.3.9</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
